# Aura-Hub

./: .env  README.md  error.txt  package-lock.json  package.json  tailwind.config.ts  tmp_event.json  updater.json  use telementry extra.txt  vite.config.ts
Telementry/: aura_hub_telemetry.cpp  telemetry.rs
src/: App.tsx  index.css
src-tauri/: Cargo.toml  error.txt  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/components/: Titlebar.tsx
src/components/events/: FeaturedEventsCarousel.tsx
src/components/layout/: AppLayout.tsx
src/components/telemetry/: TelemetryPanel.tsx
src/components/transitions/: PageTransition.tsx
src/hooks/: useAutoUpdater.tsx  useFleetStats.tsx  useTelemetry.tsx  useTruckersMP.tsx
src/lib/: tauri.ts
src/pages/: Auth.tsx  Dashboard.tsx  DebugTelemetry.tsx  DeveloperPanel.tsx  Events.tsx  FleetOverview.tsx  MyStats.tsx  Settings.tsx  SystemLogs.tsx  Telemetry.tsx  UserManagement.tsx  calender.tsx
supabase/: config.toml
supabase/functions/tmp-events/: index.ts
supabase/functions/vtc-events/: index.ts
